--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,8 +2,24 @@ body {
     background-color: #f8f9fa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     bottom: 0;
+    display: flex;
+    flex-direction: column;
 }
 
+main {
+    flex-grow: 1;
+}
+
+footer {
+    margin-top: 50px;
+    position: absolute;
+    flex-shrink: 0;
+    bottom: 0px ;
+    padding: 20px;
+    background: #222;
+    color: #aaa;
+    text-align: center;
+}
 
 .form-container {
     background: #ffffff;
@@ -34,15 +50,6 @@ body {
 
 .btn-primary:hover {
     background-color: #0056b3;
-}
-
-footer {
-    margin-top: 50px;
-    margin-bottom: 0px;
-    padding: 20px;
-    background: #222;
-    color: #aaa;
-    text-align: center;
 }
 
 .navbar {
@@ -97,14 +104,6 @@ h2 {
 .btn-default:hover {
     background-color: #0056b3;
     color: #fff;
-}
-
-footer {
-    margin-top: 50px;
-    padding: 20px;
-    background: #222;
-    color: #aaa;
-    text-align: center;
 }
 
 legend {
