--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,25 +1,40 @@
-body {
+html, body {
+    height: 100%;           
+    margin: 0;               
     background-color: #f8f9fa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
 }
 
-main {
-    flex-grow: 1;
-}
 
-footer {
-    margin-top: 50px;
-    position: absolute;
-    flex-shrink: 0;
-    bottom: 0px ;
+footer {        
     padding: 20px;
     background: #222;
     color: #aaa;
     text-align: center;
 }
+
+h2 {
+    font-weight: 600;
+    margin-bottom: 20px;
+    color: #444;
+}
+
+
+legend {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #333;
+    border-bottom: 2px solid #ddd;
+    padding-bottom: 10px;
+}
+
+
+.container {
+    background: #fff;
+    padding: 30px;
+    border-radius: 8px;
+}
+
 
 .form-container {
     background: #ffffff;
@@ -62,12 +77,6 @@ footer {
     font-size: 1.3em;
 }
 
-h2 {
-    font-weight: 600;
-    margin-bottom: 20px;
-    color: #444;
-}
-
 .contact-card {
     background: #ffffff;
     padding: 25px;
@@ -106,13 +115,6 @@ h2 {
     color: #fff;
 }
 
-legend {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: #333;
-    border-bottom: 2px solid #ddd;
-    padding-bottom: 10px;
-}
 
 .table {
     background: #fff;
@@ -138,10 +140,4 @@ legend {
 
 .table a:hover {
     text-decoration: underline;
-}
-
-.container {
-    background: #fff;
-    padding: 30px;
-    border-radius: 8px;
 }
