--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,4 @@
+
 html, body {
     height: 100%;           
     margin: 0;               
@@ -126,7 +127,6 @@ legend {
 .table th {
     background-color: #007bff;
     color: #fff;
-    text-align: center;
 }
 
 .table td {
@@ -140,4 +140,20 @@ legend {
 
 .table a:hover {
     text-decoration: underline;
+}
+
+
+    /* Position toast at top center */
+.toast-top {
+    display: none; /* hidden by default */
+    position: fixed;
+    top: 70px;
+    left: 50%;
+    transform: translateX(-50%);
+    min-width: 250px;
+    background: rgba(0,0,0,0.7);
+    color: #fff;
+    z-index: 9999;
+    padding: 10px;
+    border-radius: 4px;
 }
