--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,10 +4,19 @@ html, body {
     margin: 0;               
     background-color: #f8f9fa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    
+}
+body {
+    display: flex;
+    flex-direction: column;
 }
 
+main {
+    flex: 1; /* take all leftover space */
+}
 
-footer {        
+footer {  
+    margin-top: auto;      
     padding: 20px;
     background: #222;
     color: #aaa;
